# cavoke-apiary

./: .gitlab-ci.yml  .travis.yml  README.md  oas3.yaml  tox.ini
.github/files/: python-openapi-gen.yml
.github/workflows/: build-clients.yml  build-http.yml  checks.yml  test-python.yml
.openapi-generator/: FILES
cavoke_openapi_client/api/: default_api.py
client/: CMakeLists.txt  OAIDefaultApi.cpp  OAIDefaultApi.h  OAIEnum.h  OAIError.cpp  OAIError.h  OAIGameInfo.cpp  OAIGameInfo.h  OAIGameMove.cpp  OAIGameMove.h  OAIGameState.cpp  OAIGameState.h  OAIGameStatistics.cpp  OAIGameStatistics.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  OAIHttpRequest.h  OAIOauth.h  OAIObject.h  OAIOccupiedPositions.cpp  OAIOccupiedPositions.h  OAIPlayer.cpp  OAIPlayer.h  OAIRoomInfo.cpp  OAIRoomInfo.h  OAIServerConfiguration.h  OAIServerVariable.h  OAISessionCreationRequest.cpp  OAISessionCreationRequest.h  OAISessionInfo.cpp  OAISessionInfo.h  OAIUser.cpp  OAIUser.h  OAIUserGameStatistics.cpp  OAIUserGameStatistics.h  OAIUserStatistics.cpp  OAIUserStatistics.h  (+3 more)
docs/: DefaultApi.md  Error.md  GameInfo.md  GameMove.md  GameState.md  GameStatistics.md  InviteCode.md  OccupiedPositions.md  Player.md  RoomInfo.md  SessionCreationRequest.md  SessionInfo.md  User.md  UserGameStatistics.md  UserStatistics.md  ValidationResult.md
python-client/.github/workflows/: test-python.yml
